# Operating-System-Power-Consumption-Analyzer

./: .gitignore  DEPLOYMENT.md  README.md  metrics.db
PowerPulse/: check_backend.py  list_models.py  metrics.db  pyproject.toml  run_app.bat  test_snapshot.csv  verify_definition.py  verify_fallback.py  verify_fix.py  verify_gemini.py  verify_install.py  verify_kill_fix.py  verify_output.txt  verify_psutil.py  verify_result.txt  verify_smart_kill.py
PowerPulse/frontend/: eslint_report.json  index.html  package-lock.json  package.json
PowerPulse/frontend/src/: App.jsx  Layout.jsx  config.js  index.css
PowerPulse/frontend/src/components/: ReportDocument.jsx
PowerPulse/frontend/src/hooks/: useAlerts.js
PowerPulse/frontend/src/pages/: AIAssistant.jsx  BatteryHealth.jsx  Benchmarks.jsx  Dashboard.jsx  EnergyEstimator.jsx  GPUMonitor.jsx  History.jsx  Insights.jsx  KernelLab.jsx  PowerProfiles.jsx  Processes.jsx  Reports.jsx  Resources.jsx  SchedulerSimulator.jsx  Settings.jsx  ThermalMonitor.jsx
PowerPulse/src/: metrics.db  test_full_stack.py  test_thermal.py
PowerPulse/src/powerpulse/: api.py  cli.py  database.py  monitor.py  ui.py
PowerPulse/src/powerpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
